<resources>
    <string name="app_name">Mefunor</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="male">male</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="permission_message">We need to write on disk to use camera.</string>
    <string name="login">Login</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="mefunor_logo">Mefunor Logo</string>
    <string name="sex">sex</string>
    <string name="male_uppercase">Male</string>
    <string name="female_uppercase">Female</string>
    <string name="weight_kg">Weight(kg)</string>
    <string name="height_cm">Height(cm)</string>
    <string name="birthday_please_follow_xxxx_xx_xx">Birthday(Please follow \'xxxx.xx.xx\')</string>
    <string name="anamnesis">Anamnesis</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="imageview">ImageView</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="list_image">List Image</string>
    <string name="infomation">Infomation</string>
    <string name="function">Function</string>
    <string name="logout">Logout</string>
    <string name="upload">Upload</string>
</resources>
