<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="72dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">


        <!--  Name Label -->
        <android.support.design.widget.TextInputLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="8dp"
           android:layout_marginBottom="8dp">
           <EditText android:id="@+id/input_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="none"
             android:hint="@string/name" />
         </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:contentDescription="@string/sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioMale"
                android:text="@string/male_uppercase"
                android:checked="true">
            </RadioButton>
            <RadioButton android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioFemale"
                android:text="@string/female_uppercase">
            </RadioButton>
          </RadioGroup>

        <!--  Weight Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/weight_kg"/>
        </android.support.design.widget.TextInputLayout>

        <!--  Height Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/height_cm"/>
        </android.support.design.widget.TextInputLayout>

        <!--  Birthday Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:hint="@string/birthday_please_follow_xxxx_xx_xx"/>
        </android.support.design.widget.TextInputLayout>

        <!--  Anamnesis Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_anamnesis"
                android:layout_width="match_parent"
                android:minLines="2"
                android:maxLines="10"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:hint="@string/anamnesis"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Save Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_save"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:padding="12dp"
            android:text="@string/save"/>

        <!-- Cancel Button -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:padding="12dp"
            android:text="@string/cancel"/>

    </LinearLayout>
</ScrollView>